# hire-flow

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md  TODOS.md  compose.yaml  go.work  go.work.sum
docs/architecture/: overview.md
docs/plans/: 2026-03-17-m0-skeleton.md  2026-03-17-m1-jobs-api.md  2026-03-18-m2-ai-matching.md  2026-03-19-m3-payments.md  2026-03-19-m4-contracts-saga.md  2026-03-20-m5-client-bff.md  2026-03-20-m6-observability.md  2026-03-21-m8-frontend-client.md  2026-03-21-m9-freelancer.md  2026-03-23-m10-admin-bff-frontend.md
infra/grafana/dashboards/: services.json
infra/otel-collector/: config.yaml
infra/prometheus/: prometheus.yml
infra/traefik/: dynamic.yml  traefik.yml
pkg/bff/: auth.go  auth_test.go  client.go  client_test.go  context.go  go.mod  http.go  middleware.go  middleware_test.go  role_test.go
pkg/outbox/: go.mod  go.sum  outbox.go  publisher.go  store.go
pkg/telemetry/: go.mod  go.sum  handler.go  handler_test.go  telemetry.go
services/ai-matching/: Dockerfile  pyproject.toml
services/ai-matching/src/: api.py  config.py  consumer.py  embedding.py  main.py  models.py  qdrant_store.py  telemetry.py
services/ai-matching/tests/: conftest.py  test_api.py  test_config.py  test_consumer.py  test_embedding.py  test_integration.py  test_models.py  test_qdrant_store.py
services/bff/admin/: Dockerfile  go.mod  go.sum
services/bff/client/: Dockerfile  go.mod  go.sum
services/bff/freelancer/: Dockerfile  go.mod  go.sum
services/contracts/: Dockerfile  go.mod  go.sum
services/frontend/: .gitignore  biome.json  package.json  pnpm-lock.yaml
services/jobs-api/: Dockerfile  go.mod  go.sum
services/payments/: Dockerfile  go.mod  go.sum
(+175 files in other folders)
